# RoboticsStudio1

./: #include <iostream>.cpp  README.md
Bhupesh/sprint3/: CMakeLists.txt  package.xml
Bhupesh/sprint3/html/: annotated.html  classDetectCylinderNode-members.html  classDetectCylinderNode.html  classDetectCylinderNode__coll__graph.md5  classDetectCylinderNode__inherit__graph.map  classMapImageOverlayNode-members.html  classMapImageOverlayNode.html  classMapImageOverlayNode__coll__graph.map  classMapImageOverlayNode__coll__graph.md5  classes.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e1a715d407a4074a9fa63b2e02ec2b8f.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html
Bhupesh/sprint3/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
Bhupesh/sprint3/latex/: annotated.tex  classDetectCylinderNode.tex  classDetectCylinderNode__coll__graph.md5  classMapImageOverlayNode.tex  classMapImageOverlayNode__coll__graph.md5  hierarchy.tex  refman.tex
Bhupesh/sprint3/src/: detect_cylinder_node.cpp  map_image_overlay_node.cpp
Bhupesh/sprint4/: CMakeLists.txt  package.xml
Dom/: map.bt  map.yaml  overlayer.cpp
dbon/assessment1/: CMakeLists.txt  package.xml
dbon/assessment1/src/: rescan.cpp
harrison/: library.launch.py
harrison/launch_files/: no_books_library.launch.py  no_books_library.world
harrison/sprint1/: CMakeLists.txt  package.xml
harrison/sprint1/src/: sprint1.cpp
harrison/sprint2/: CMakeLists.txt
harrison/sprint2/src/: sprint2.cpp
krel/: library.world  libraryV2.world  libraryV3.world  map.pgm  map.yaml  no_books_library.world  office_room.launch.py  office_room.world
krel/cylinder_model/: model.config  model.sdf
krel/localisation maps/: carto_map.pgm  carto_map.yaml  my_map.pgm
krel/projectmaps/: map.bt  map.yaml
krel/projectmaps/slam_toolbox_maps/: libraryV3_map.pgm  libraryV3_map.yaml
krel/sprint1/: CMakeLists.txt  package.xml
krel/sprint1/src/: reduced_scan.cpp
krel/sprint2/: CMakeLists.txt  package.xml
krel/sprint2 maps/: sprint2_map.pgm  sprint2_map.yaml
krel/sprint2/AMCLvsODOM/: AMCLvsODOM  AMCLvsODOM.csv
krel/sprint2/src/: map_processor.cpp
krel/sprint3/: CMakeLists.txt  package.xml
krel/sprint3/log/: latest_list
krel/sprint3/src/: identify_node.cpp  overlay.cpp
labs/: README.md
labs/lab1/: README.md
labs/lab1/rs1_lab1/: CMakeLists.txt
labs/lab1/rs1_lab1/log/: latest_list
labs/lab1/rs1_lab1/src/: opencv_sub.cpp
labs/lab2/: README.md  rs1_lab2
labs/lab2/rs1_lab2/: CMakeLists.txt
labs/lab2/rs1_lab2/log/: latest_list
labs/lab4/rs1_lab4/: CMakeLists.txt
labs/lab4/rs1_lab4/src/: dead_reckoning_node.cpp
labs/lab5/rs1_lab5/: CMakeLists.txt  package.xml
(+2 files in other folders)
